--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.7"
   }
 }
