--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.14",
     "node-cron": "^3.0.0",
-    "nodemon": "^2.0.7"
-  }
+    "nodemon": "^2.0.7",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
+  },
+  "optionalDependencies": {}
 }
