--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.14",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.7",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
