--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.4",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.7",
+    "razorpay": "^2.8.1",
+    "shortid": "^2.2.16",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
-  },
-  "optionalDependencies": {}
+  }
 }
