--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.4",
     "nodemon": "^2.0.7",
     "razorpay": "^2.8.1",
     "shortid": "^2.2.16",
