--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "hi-base32": "^0.5.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.14",
@@ -28,6 +30,7 @@
     "node-cron": "^3.0.0",
     "nodemailer": "^6.7.4",
     "nodemon": "^2.0.7",
+    "otpauth": "^9.2.1",
     "razorpay": "^2.8.1",
     "shortid": "^2.2.16",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
