--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "otpauth": "^9.2.1",
     "razorpay": "^2.8.1",
     "shortid": "^2.2.16",
+    "socket.io": "^4.7.5",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.4.0"
   }
 }
